# aoc

./: Cargo.toml  README.md  bun.lockb  package.json
2015/src/: day10.rs  day15.rs  day21.rs  day4.rs  day8.rs
2016/src/: day14.rs  day16.rs  day23.rs  day8.rs  day9.rs
2017/: LICENSE  package.yaml
2017/src/: CoprocessorConflagration.hs  DiskFrag.hs
2018/: Cargo.toml
2018/src/: day12.rs  day4.rs
2019/src/: day12.rs  day23.rs  day24.rs  day25.rs  day3.rs  day6.rs  day9.rs  main.rs
2020/: Cargo.toml
2020/src/: day14.rs  lib.rs
2021/src/: day15.rs  day17.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day3.rs  day6.rs  day9.rs
2022/src/: day1.rs  day14.rs  day15.rs  day17.rs  day18.rs  day20.rs  day22.rs  day23.rs  day24.rs  day3.rs  day5.rs  day6.rs  day7.rs  day8.rs  utils.rs
2023/: bun.lockb
2024/: pyproject.toml
2024/src/aoc2024/: __init__.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py
aoc2015/: README.md
aoc2016/: Cargo.toml
aoc2017/: .gitignore  aoc17.cabal  format
aoc2018/: .travis.yml
aoc2019/: Cargo.toml
aoc2021/: Cargo.toml
aoc2022/: Cargo.toml
aoc2023/: package.json
aoc2024/: lol.py
examples/: day13.rs
src/: Duet.hs  HexEd.hs  KnotHash.hs  PacketScanner.hs  ParticleSwarm.hs  Passphrase.hs  Registers.hs  Tubes.hs  TwistyTrampolines.hs  day1.rs  day1.ts  day10.rs  day11.rs  day12.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.ts  day22.rs  day25.rs  day3.rs  day4.rs  day5.rs  day5.ts  day6.rs  day7.rs  day8.rs  day8.ts  day9.rs  lib.rs  main.rs  util.rs
(+159 files in other folders)
