[project]
name = "aoc2024"
version = "0.1.0"
description = "My solution for Advent of Code 2024"
authors = [{ name = "Daniele D'Orazio", email = "d.dorazio96@gmail.com" }]
dependencies = []
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aoc2024"]

[tool.ruff.lint]
ignore = ["E741"]
